vlib/v/checker/tests/interface_option_cast_err.out
vlib/v/checker/tests/interface_option_cast_err.vv:12:2: warning: unused variable: `b`
   10 |     a := ?Foo{}
   11 |     dump(a)
   12 |     b := IFoo(a?)
      |     ^
   13 |     c := IFoo(a)
   14 | }
vlib/v/checker/tests/interface_option_cast_err.vv:13:2: warning: unused variable: `c`
   11 |     dump(a)
   12 |     b := IFoo(a?)
   13 |     c := IFoo(a)
      |     ^
   14 | }
vlib/v/checker/tests/interface_option_cast_err.vv:13:7: error: cannot type cast an Option
   11 |     dump(a)
   12 |     b := IFoo(a?)
   13 |     c := IFoo(a)
      |          ~~~~~~~
   14 | }
