vlib/v/checker/tests/interface_option_cast_err.vv
interface IFoo {
	a int
}

struct Foo {
	a int
}

fn main() {
	a := ?Foo{}
	dump(a)
	b := IFoo(a?)
	c := IFoo(a)
}
